feat: integrate autotune, smooth efficiency and best difficulty timer on latest upstream master
