# main/http_server/axe-os/src/app/app.module.ts
@@ -33,6 +33,7 @@ import { SystemComponent } from './components/system/system.component';
 import { UpdateComponent } from './components/update/update.component';
 import { NetworkComponent } from './components/network/network.component';
 import { SettingsComponent } from './components/settings/settings.component';
+import { AutotuneComponent } from './components/autotune/autotune.component';
 import { SwarmComponent } from './components/swarm/swarm.component';
 import { ScoreboardComponent } from './components/scoreboard/scoreboard.component';
 import { ThemeConfigComponent } from './components/design/theme-config.component';
@@ -44,22 +45,16 @@ import { HashSuffixPipe } from './pipes/hash-suffix.pipe';
 import { DiffSuffixPipe } from './pipes/diff-suffix.pipe';
 import { AddressPipe } from './pipes/address.pipe';
 import { SatsPipe } from './pipes/sats.pipe';
+import { HeatmapLightnessPipe } from './pipes/heatmap-lightness.pipe';
 import { DialogService, DialogListComponent } from './services/dialog.service';
 
 const components = [
   AppComponent,
-  NetworkEditComponent,
-  HomeComponent,
   ModalComponent,
-  TooltipIconComponent,
-  TooltipTextIconComponent,
-  ConfettiComponent,
   SnowflakesComponent,
-  NetworkComponent,
   LogsComponent,
   SystemComponent,
   UpdateComponent,
-  PoolComponent
 ];
 
 @NgModule({
@@ -90,6 +85,7 @@ const components = [
     SliderComponent,
     AppChartComponent,
     EditComponent,
+    AutotuneComponent, // <--- HIER ERGÄNZT
     SettingsComponent,
     ProgressbarComponent,
     ANSIPipe,
@@ -98,6 +94,7 @@ const components = [
     DiffSuffixPipe,
     AddressPipe,
     SatsPipe,
+    HeatmapLightnessPipe,
   ],
   providers: [
     { provide: LocationStrategy, useClass: HashLocationStrategy },
